4/14/2023: Karl
- added go-mail dependency for easy mail sending 
- authorized app on gmail and got a token from them for use with sending emails 
- SMTPServer, SMTPass, SMTPUser values in ServerConfig, correspond to SMTP_SERVER, SMTP_USERNAME, SMTP_PASS in .env file. 
- Config validates those .env values exist and sets them in ServConfig 
- Added Store.PwResetRequest to handle database queries needed related to a password reset request. (Deleting old codes, adding the new one) Store also calls the mail function.
- Added database > SendPWResetCode(email, code) to actually dispatch the email. It's in database because that's who will call it. (Relies on Config for settings, otherwise would be in util) 

Week of 4/7/2023: Karl
- Dockerized the go server
- Deployed to the cloud (Kamatera)
- New flags for process start:
   - --nocli={true|false} : starts server with/without cli 
   - --env=my_env_path - starts server with path to .env file 
   - --docker={true|false} - defaults to false. Starts server in docker mode. This configures how the connection to the database is made. 
- Dockerfile builds a custom image of the server 
- Added PostgresDocker to Config to track whether in Docker mode 
- Got rid of second migration. It had problems incrementing the IDs and had some annoying bugs. 


3/29/2023: Karl 
- Ban pipeline finished
- Domain banning and global banning 
- Making profileUpdateResponse a polymorphic method of controllers


3/24/2023: Karl 
- ViewModRecords pipeline
- Made some schema changes, re-migrate required 

3/22/2023: Karl
- Moderate pipeline "/moderate"
- comment reports and votes won't work for removed comments
- removed comments return "~removed~" and empty string username to requesting users. This is only in the page cache, not what is stored in the database. 
- removed comments update in the page cache in real time to "remove" so we don't have to restart server to see removed comments