@@ -11,5 +11,6 @@ require (
 
 require (
 	github.com/go-mail/mail v2.3.1+incompatible // indirect
+	golang.org/x/crypto v0.8.0
 	gopkg.in/alexcesaro/quotedprintable.v3 v3.0.0-20150716171945-2caba252f4dc // indirect
 )
